# physlite-peft-paper-code

./: .gitignore  README.md  environment.yml  pyproject.toml
code/: datasets.py  experiments.py  models.py  prepare.py  probe.py  stats.py
configs/: paper.json
data/: Physion
data/manifests/: main.csv
data/manifests/repeated_splits/: split_211.csv  split_307.csv  split_401.csv  split_503.csv  split_601.csv
docs/: RESULTS_MAP.md  TRICK_EXPERIMENTS.md
physlite/: __init__.py  report.py  train.py
reference_results/: README.md  backbone_scout.json  counterfactual.json  counterfactual_probes.json  deit_b.json  main.json  prefix16.json  prefix8.json  readout.json  repeated.json  staged.json
scripts/: import_legacy_results.py  reproduce_all.sh  reproduce_core.sh  run_ema_scout.sh  run_paired_rng_query_dominant.sh  run_trick_multiseed.sh  run_trick_scout.sh  summarize_ema_scout.py  summarize_trick_multiseed.py  summarize_trick_scout.py
src/physlite/: __init__.py  datasets.py  experiments.py  models.py  prepare.py  probe.py  report.py  stats.py  train.py
tests/: test_protocol.py
