[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "physlite-peft"
version = "1.0.0"
description = "Controlled PEFT experiments for physical video understanding"
requires-python = ">=3.12"
dependencies = [
  "numpy==2.4.6",
  "opencv-python-headless==4.13.0.92",
  "pandas==3.0.3",
  "scikit-learn==1.9.0",
  "scipy==1.17.1",
  "timm==1.0.27",
  "torch==2.11.0",
  "torchvision==0.26.0",
]

[project.scripts]
physlite-train = "physlite.train:main"
physlite-run = "physlite.experiments:main"
physlite-report = "physlite.report:main"
physlite-prepare = "physlite.prepare:main"
physlite-probe = "physlite.probe:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
